--- a/fitbit4.html
+++ b/fitbit4.html
@@ -69,23 +69,49 @@ svg {display: block; width: 100%; margin: 40;}
 <h1>
   FITBIT @ IDEO
 </h1>
-    <!-- <img src="/img/fblogo.png"> -->
-
-<!--     <tags>
-        <h3>
-            <div id="tagsView"></div>
-        </h3>
-    </tags> -->
+<tags>
+        <img src="/img/drive.png">
+        <img src="/img/hack.png">
+        <img src="/img/ignite.png">
+        <img src="/img/root.png">
+</tags>
 </header>
+<!-- <center> -->
+<!-- <tags>
+        <img src="/img/drive.png">
+        <img src="/img/hack.png">
+        <img src="/img/ignite.png">
+        <img src="/img/root.png">
+</tags> -->
+<!--             <div id="tagsView"></div>
+ -->        
+<!-- there would be one div per collective so that we can filter based on that data -->
+<!-- </center> -->
+<center>
+<h3>
+  <div id="click">    
 
-<div id="click"> </div>
+<toggleButtons>
+    <toggleTimeline>
+        Layout <img src="/img/toggleTimeline-a.png">
+    </toggleTimeline>
+    <toggleCluster>
+        <img src="/img/toggleCluster-b.png"> Cluster
+    </toggleCluster>
+</toggleButtons>
+</div>
+</h3>
+</center>
+
+
 <div id="clicked" style="display:none"></div>
 <div id="small_multiples"></div>
 
 
 <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script> 
 <script type="text/javascript" src="js/jquery.tipsy.js"></script>
-<link href="tipsy.css" rel="stylesheet" type="css/text/css" /> 
+<link href="css/style.css" rel="stylesheet" type="text/css" /> 
+<link href="css/tipsy.css" rel="stylesheet" type="text/css" /> 
 <script src="https://dl.dropboxusercontent.com/u/97059/fitbit/d3.v3.min.js"></script>
 <script type="text/javascript" src="js/fb.js"></script>
 
