cleaned up and added filters on rectangle view

--- a/fitbit4.html
+++ b/fitbit4.html
@@ -69,28 +69,11 @@ svg {display: block; width: 100%; margin: 40;}
 <h1>
   FITBIT @ IDEO
 </h1>
-<tags>
-        <img src="/img/drive.png">
-        <img src="/img/hack.png">
-        <img src="/img/ignite.png">
-        <img src="/img/root.png">
-</tags>
 </header>
-<!-- <center> -->
-<!-- <tags>
-        <img src="/img/drive.png">
-        <img src="/img/hack.png">
-        <img src="/img/ignite.png">
-        <img src="/img/root.png">
-</tags> -->
-<!--             <div id="tagsView"></div>
- -->        
-<!-- there would be one div per collective so that we can filter based on that data -->
-<!-- </center> -->
+
 <center>
 <h3>
-  <div id="click">    
-
+<div id="click">    
 <toggleButtons>
     <toggleTimeline>
         Layout <img src="/img/toggleTimeline-a.png">
@@ -103,6 +86,30 @@ svg {display: block; width: 100%; margin: 40;}
 </h3>
 </center>
 
+<center>
+    <div id="filter">    
+<tags>
+  <toggleDrive>
+        <img src="/img/drive.png">
+  </toggleDrive>
+    <toggleHack>
+        <img src="/img/hack.png">
+    </toggleHack>
+    <toggleIgnite>
+        <img src="/img/ignite.png">
+    </toggleIgnite>
+    <toggleRoot>
+        <img src="/img/root.png">
+    </toggleRoot>
+    <toggleForm>
+        <img src="/img/form.png">
+    </toggleForm>
+    <toggleGlobal>
+        <img src="/img/global.png">
+    </toggleGlobal>
+</tags>
+      </div>
+</center>
 
 <div id="clicked" style="display:none"></div>
 <div id="small_multiples"></div>
