--- a/fitbitG.html
+++ b/fitbitG.html
@@ -63,6 +63,11 @@ font-weight: bold;
 svg {display: block; width: 100%; margin: 40;}
 
 </style>
+<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script> 
+<script type="text/javascript" src="js/jquery.tipsy.js"></script>
+<link href="css/style.css" rel="stylesheet" type="text/css" /> 
+<link href="css/tipsy.css" rel="stylesheet" type="text/css" /> 
+<script src="https://dl.dropboxusercontent.com/u/97059/fitbit/d3.v3.min.js"></script>
 <body>
 
   <header>
@@ -70,6 +75,7 @@ svg {display: block; width: 100%; margin: 40;}
   FITBIT @ IDEO
 </h1>
 </header>
+
 
 <center>
 <h3>
@@ -111,16 +117,18 @@ svg {display: block; width: 100%; margin: 40;}
       </div>
 </center>
 
+<!-- <div id="subtitle">IDEOers are earning points by taking steps and making connections with other Fitbit/ers:<br> 
++ 1 point for every step they take<br>
++ 1 point for every 5 steps taken by connections within their Collective<br>
++ 1 point for every 10 steps taken by connections outside their Collective.
+<br><br>
+You’ll know a connection has been made every time you see a pair of Fitbiters getting their picture taken <br> in front of the Connection Graph poster in San Francisco or Palo Alto. <br> Once each pair posts their pics to the Fitbit Story Stream (an internal Facebook Group) <br> they’ll be earning points from each others’ steps. 
+</span>
+<br><br>
+</div> -->
+<script type="text/javascript" src="js/fb.js"></script>
 <div id="clicked" style="display:none"></div>
 <div id="small_multiples"></div>
-
-
-<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script> 
-<script type="text/javascript" src="js/jquery.tipsy.js"></script>
-<link href="css/style.css" rel="stylesheet" type="text/css" /> 
-<link href="css/tipsy.css" rel="stylesheet" type="text/css" /> 
-<script src="https://dl.dropboxusercontent.com/u/97059/fitbit/d3.v3.min.js"></script>
-<script type="text/javascript" src="js/fb.js"></script>
 
 
 </body>
